# AI-Agent-and-Scraping-Automation

./: .gitignore  .pre-commit-config.yaml  arxiv_scraped_data.xlsx  packages.txt  pyproject.toml  pytest.ini  ruff.toml  schema.excalidraw
.devcontainer/: devcontainer.json
arxiv_project/: arxiv.py  email_extraction_and_search.py  main2.py  playground.ipynb
arxiv_project/output/: arxiv_scraped_data.xlsx  arxiv_scraped_data_backup.xlsx  test.xlsx
arxiv_project/src/: arxiv.py  deprecated_scholar.py  email_extraction_and_search.py  playground.ipynb
project1/: .env  AI_intergration.py  arxiv.py  email_extraction_and_search.py  main2.py  playground.ipynb  prototype_arxiv.ipynb  schema.excalidraw  test.py
sd_pm_ls_scraper/: filter_data.py  pubmed.py  sciencedirect.py  springer.py
sd_pm_ls_scraper/src/: email_extraction_and_search.py  filter_and_download_data.py  playground.ipynb  pubmed.py  sciencedirect.py  springer.py  websearchCLI.py
sd_pm_ls_scraper/tests/: test_email_extraction_and_search.py  test_pubmed.py  test_sciencedirect.py
streamlit-websearch-ui/: README.md  requirements.txt
streamlit-websearch-ui/.streamlit/: config.toml
streamlit-websearch-ui/src/: app.py
streamlit-websearch-ui/src/assets/: styles.css
streamlit-websearch-ui/src/components/: ui_elements.py
streamlit-websearch-ui/src/utils/: websearch_utils.py
streamlit_scraper_app/: requirements.txt
streamlit_scraper_app/src/: app.py
streamlit_scraper_app/src/utils/: app_utils.py
