[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "beautifulsoup4>=4.13.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "pyautogui>=0.9.54",
    "scrapy>=2.12.0",
    "selenium>=4.28.1",
    "spacy>=3.8.4",
    "webdriver-manager>=4.0.2",
]
