[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "notebook>=7.3.2",
    "openai>=1.63.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.5",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
]
