[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "biopython>=1.85",
    "browser-use>=0.1.39",
    "git-filter-repo>=2.47.0",
    "notebook>=7.3.2",
    "openai>=1.63.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "playwright>=1.50.0",
    "pybliometrics>=4.2.1",
    "pycountry>=24.6.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
]
